# NotionUploader

./: .gitignore  .importlinter  AGENTS.md  CHANGELOG.md  ENV_VAR_RENAME_STEPS.md  README.md  generate_openapi.py  openapi.json  openapi_v2.yaml  pyproject.toml  render.yaml  requirements.txt  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bruno/Intervals.icu/: Activity Detail Diagnostic.bru  Activity Intervals.bru  List Activities.bru  Trigger Sync.bru  collection.bru
bruno/Nutrition Logger/: Complex data.bru  Get foods for day.bru  List Daily Nutrition Entries.bru  Log a food entry to Notion.bru  Process Activity.bru  Strava Webhook POST.bru  Strava Webhook.bru  bruno.json  collection.bru
bruno/Nutrition Logger/environments/: Local.bru  Render.bru
bruno/Strava/: Activity Detail.bru  Athlete Zones.bru  Athlete.bru  List Activities.bru  Refresh token.bru  Request subscription.bru  View Subscriptions.bru  collection.bru
bruno/Strava/environments/: VM.bru
examples/: activity-detail-example.json  notion-athlete-profile-db.csv  notion-strava-workouts-db.csv
examples/cron/: sync_intervals.sh
inputs/: example.json
scripts/: coverage_gate.py  ensure_notion_workout_schema.py
src/: __init__.py  config.py  import_linter_runner.py  main.py  metrics.py  models.py  notion.py  nutrition.py  redis.py  routes.py  security.py  settings.py  strava.py  strava_activity.py  strava_webhook.py  streamlit_app.py  withings.py  workout_notion.py
src/application/: __init__.py  advice.py  advice_context.py  metrics.py  nutrition.py  workouts.py
src/domain/: __init__.py  dag.py  workout_metrics.py
src/domain/advice/: __init__.py  body.py  cross_domain.py  dates.py  nutrition.py  quality.py  statistics.py  training.py  window.py
src/domain/body_metrics/: __init__.py  hr.py  moving_average.py  regression.py  vo2.py
src/domain/nutrition/: __init__.py  summaries.py  summary.py
src/intervals_icu/: __init__.py
src/intervals_icu/application/: __init__.py  coordinator.py  mapper.py  ports.py
src/intervals_icu/infrastructure/: __init__.py  client.py
src/models/: __init__.py  activity.py  advice.py  advice_context.py  body.py  nutrition.py  responses.py  strava.py  time.py  workout.py
src/notion/: __init__.py
src/notion/application/: __init__.py  ports.py
src/notion/infrastructure/: __init__.py  nutrition_repository.py  workout_repository.py  workout_schema.py
src/platform/: README.md  __init__.py  config.py  security.py  wiring.py
src/platform/clients/: __init__.py
src/routes/: advice.py  intervals.py  metrics.py  nutrition.py  strava.py  utils.py  workouts.py
src/services/: dag_loader.py  interfaces.py  notion.py  redis.py  strava_activity.py
src/strava/: __init__.py
src/strava/application/: __init__.py  coordinator.py  ports.py
src/strava/domain/: __init__.py  metrics.py
src/strava/infrastructure/: __init__.py  client.py
src/withings/: __init__.py
src/withings/application/: __init__.py  ports.py  services.py
src/withings/infrastructure/: __init__.py  client.py
src/workout_payload/: __init__.py
src/workout_payload/application/: __init__.py  ports.py
src/workout_payload/infrastructure/: __init__.py  redis_store.py
tests/: .instructions  builders.py  conftest.py  test_advice_context.py  test_advice_quality.py  test_config.py  test_dag_loader.py  test_healthz.py  test_import_linter_runner.py  test_intervals_client.py  test_intervals_coordinator.py  test_intervals_mapper.py  test_main.py  test_metrics.py  test_notion_client.py  test_openapi_generation.py  test_shared_test_doubles.py  test_strava_client.py  test_strava_coordinator.py  test_strava_service.py  test_time.py  test_vo2max.py  test_withings_client.py  test_workout_notion.py  test_workout_payload_store.py  test_workout_tss_estimation.py
tests/api/: helpers.py  test_advice.py  test_advice_context_api.py  test_auth.py  test_intervals_sync.py  test_nutrition.py  test_strava_webhook.py  test_workouts.py
tests/domain/advice/: __init__.py  test_body.py  test_nutrition.py  test_training.py  test_window.py
tests/fakes/: __init__.py  notion.py
