[project]
name = "calory-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "openapi-spec-validator==0.7.2",
    "pydantic-settings==2.0.3",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
    "respx==0.20.1",
    "ruff>=0.14.3",
    "upstash-redis==1.4.0",
    "uvicorn[standard]==0.29.0",
    'tzdata; sys_platform == "win32"'
]
