[project]
name = "NotionUploader"
version = "0.1.0"
description = "FastAPI service that syncs nutrition, workout, and biometric data into Notion databases."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "NotionUploader Contributors" }
]
maintainers = [
    { name = "NotionUploader Maintainers" }
]
scripts = { import-linter = "src.import_linter_runner:main" }
license = { text = "Proprietary" }
keywords = ["notion", "fastapi", "fitness", "nutrition", "workouts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    "fastapi~=0.110.0",
    "httpx~=0.27.0",
    "networkx~=3.4.2",
    "openapi-spec-validator~=0.7.2",
    "pydantic-settings~=2.0.3",
    "python-dotenv~=1.0.1",
    "pyvis~=0.3.2",
    "streamlit~=1.40.0",
    "upstash-redis~=1.4.0",
    "uvicorn[standard]~=0.29.0",
    'tzdata; sys_platform == "win32"'
]

[project.urls]
Homepage = "https://notionuploader-gr.onrender.com"
Documentation = "https://notionuploader-gr.onrender.com/v2/api-schema"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==5.0.0",
    "respx==0.20.1",
    "ruff>=0.14.3",
    "import-linter>=2.0.0"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["C90", "D"]
extend-ignore = [
    # Transitional shim modules intentionally manipulate imports and do not expose
    # traditional module docstrings yet.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["E402", "F401", "F403"]
"src/platform/__init__.py" = ["E402", "F401", "F403", "I001"]
"tests/**/*" = ["D", "E501", "I001"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
